<resources>
    <string name="app_name">SmartHouse</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_new_email">New Email</string>
    <string name="prompt_password">Password</string>
    <string name="new_pass">New Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_register">Not a member? Get registered</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="btn_sign_out">Sign Out</string>


    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_house_status">Status</string>
    <string name="nav_garage">Garage</string>
    <string name="nav_lights">Lights</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_settings">Settings</string>

    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Status</item>
        <item>Garage</item>
        <item>Lights</item>
        <item>Settings</item>
        <item>Profile</item>
        <item>About Us</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
