<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_house_status"
            android:icon="@drawable/ic_house_status"
            android:title="@string/nav_house_status" />
        <item
            android:id="@+id/nav_garage"
            android:icon="@drawable/ic_garage_door"
            android:title="@string/nav_garage" />

        <item
            android:id="@+id/nav_lights"
            android:icon="@mipmap/ic_light"
            android:title="@string/nav_lights" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />

    </group>

    <item android:title="Other">
        <menu>
            <item
                android:checkable="true"
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
        </menu>
    </item>

</menu>
